# practice

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
bsearch/: CMakeLists.txt  bsearch.cpp  bsearch.hpp  ut.cpp
bsearch/.devcontainer/: Dockerfile  devcontainer.json
bsort/: CMakeLists.txt  bsort.cpp  bsort.hpp  ut.cpp
bst/: CMakeLists.txt  bst.cpp  bst.hpp  ut.cpp
dlist/: CMakeLists.txt  dlist.cpp  dlist.hpp  ut.cpp
graph/: CMakeLists.txt  deplist.cpp  deplist.hpp  graph.cpp  graph.hpp  ut.cpp
graphs/deplist/: CMakeLists.txt  deplist.cpp  deplist.hpp  ut.cpp
hsort/: CMakeLists.txt  hsort.cpp  hsort.hpp  ut.cpp
htable/: CMakeLists.txt  htable.cpp  htable.hpp  ut.cpp
merge_sort/: msort.cpp  msort.hpp  ut.cpp
mslist/: CMakeLists.txt  mslist.cpp  mslist.hpp  ut.cpp
msort/: CMakeLists.txt  msort.cpp  msort.hpp  ut.cpp
pqueue/: CMakeLists.txt  pqueue.cpp  pqueue.hpp  ut.cpp
qsort/: CMakeLists.txt  qsort.cpp  qsort.hpp  ut.cpp
slist/: CMakeLists.txt  slist.cpp  slist.hpp  ut.cpp
slist/.devcontainer/: Dockerfile  devcontainer.json
stack/: CMakeLists.txt  stack.cpp  stack.hpp  ut.cpp
trie/: CMakeLists.txt  trie.cpp  trie.hpp  ut.cpp
vector/: CMakeLists.txt  main.cpp  ut.cpp  vector.cpp  vector.h  wv.cpp  wv.hpp
